I update my portal regarding the feebdack received

--- a/home-portal/index.html
+++ b/home-portal/index.html
@@ -4,31 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Home Portal</title>
+    <title>Home Portal | Tommy Sylver</title>
+    <link rel="stylesheet" href="css/style.css">    
+
 </head>
 <body>
     <header>
-        <h1>Razananaivo Sylver Tommy</h1>
         <img src="images/me.jpg" alt="picture">
+        <h1>Razananaivo Sylver Tommy</h1>
     </header>
 
-    <div class="container">
+    <main>
         <h2>WDD 230: Web Front End Development</h2>
-        <hr>
         <ul>
             <li>Lesson 01: <a href="#">Install Extensions</a></li>
             <li>Lesson 02: <a href="#">File and Folder Naming Rules</a></li>
             <li>Lesson 03: <a href="#">Basic Javascript DOM Manipulation</a></li>
         </ul>
-    </div>
-    
+    </main>
 
     <footer>
-        <P>&copy; <span id="myYear"> </span> | Razananaivo Sylver Tommy | Utah | <a href="https://www.byui.edu/online">BYUI Online Learning</a></P>
+        <P>&copy; <span id="myYear"> </span> | Razananaivo Sylver Tommy | Utah | <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a></P>
         <p>Last Updated: <span id="myDate" ></span> </p>
     </footer>
-
     <script src="js/script.js"></script>
 </body>
 </html>
+
