updating the link in the home portal page

--- a/home-portal/index.html
+++ b/home-portal/index.html
@@ -17,9 +17,9 @@
     <main>
         <h2>WDD 230: Web Front End Development</h2>
         <ul>
-            <li>Lesson 01: <a href="#">Install Extensions</a></li>
-            <li>Lesson 02: <a href="#">File and Folder Naming Rules</a></li>
-            <li>Lesson 03: <a href="#">Basic Javascript DOM Manipulation</a></li>
+            <li>Lesson 01: <a href="https://tommy18062001.github.io/wdd230/ranch/">Ranch Page</a></li>
+            <li>Lesson 02: <a href="https://tommy18062001.github.io/wdd230/lesson2/design-principles.html">Design Principles</a></li>
+            <li>Lesson 03: <a href="#">link</a></li>
         </ul>
     </main>
 
