--- a/home-portal/index.html
+++ b/home-portal/index.html
@@ -17,8 +17,8 @@
     <main>
         <h2>WDD 230: Web Front End Development</h2>
         <ul>
-            <li>Lesson 01: <a href="https://tommy18062001.github.io/wdd230/ranch/">Ranch Page</a></li>
-            <li>Lesson 02: <a href="https://tommy18062001.github.io/wdd230/lesson2/design-principles.html">Design Principles</a></li>
+            <li>Lesson 01: <a href="https://tommy18062001.github.io/wdd230/ranch/" target="_blank">Ranch Page</a></li>
+            <li>Lesson 02: <a href="https://tommy18062001.github.io/wdd230/lesson2/design-principles.html" target="_blank">Design Principles</a></li>
             <li>Lesson 03: <a href="#">link</a></li>
         </ul>
     </main>
