--- a/home-portal/index.html
+++ b/home-portal/index.html
@@ -19,7 +19,7 @@
         <ul>
             <li>Lesson 01: <a href="https://tommy18062001.github.io/wdd230/ranch/" target="_blank">Ranch Page</a></li>
             <li>Lesson 02: <a href="https://tommy18062001.github.io/wdd230/lesson2/design-principles.html" target="_blank">Design Principles</a></li>
-            <li>Lesson 03: <a href="https://tommy18062001.github.io/wdd230/water_cycle/">Water Cycle</a></li>
+            <li>Lesson 03: <a href="https://tommy18062001.github.io/wdd230/water_cycle/index.html">Water Cycle</a></li>
         </ul>
     </main>
 
