Final Update for the Weather Site Plan

--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -35,36 +35,27 @@
 
         <div class="primary">
           <span></span>
-          <p>Primary</p>
+          <p>Primary: #4F5D73</p>
         </div>
 
         <div class="secondary">
           <span></span>
-          <p>secondary</p>
+          <p>secondary: #E0995E</p>
         </div>
 
         <div class="accent-1">
           <span></span>
-          <p>Accent 1</p>
+          <p>Accent 1: #FFF</p>
         </div>
 
         <div class="accent-2">
           <span></span>
-          <p>Accent 2</p>
+          <p>Accent 2: #000</p>
         </div>
       </section>
     </main>
 
-    <footer>
-      <p>
-        &copy; <span id="myYear"> </span> | Tommy Sylver | Utah |
-        <a href="https://www.byui.edu/online" target="_blank"
-          >BYUI Online Learning</a
-        >
-      </p>
-      <p>Last Updated: <span id="myDate"></span></p>
-    </footer>
-
-    <script src="script.js"></script>
+    <footer>&copy;<span id="year"></span> | Tommy Sylver</footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
