--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -32,39 +32,31 @@
       <section>
         <h2>Name</h2>
         <p>
-          The site name will be UNKNOWN. I chose this because it emphasize the
-          importance of knowing the weather
+          The site name will be <b>knowtheweather.net</b>. I chose this because it emphasize the
+          importance of the weather and the purpose of the site, Which is to help you know the weather. 
         </p>
       </section>
 
       <section>
         <h2>Purpose</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium
-          inventore perspiciatis sequi, ipsa quibusdam facere illum rem debitis
-          quos omnis ipsum sed consectetur vitae aut doloremque ad perferendis,
-          minus dolores.
+          The purpose of this website is to educate people about how the weather is going to be. 
+          That will help them get a forecast and well schedule their daily tasks. Especially, share a valuable information
+          about the weather: What is the weather, How is it, Why it is important to know it, ...
+
         </p>
       </section>
 
       <section>
         <h2>Domain Name</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium
+          knowtheweather.net
         </p>
       </section>
     </main>
 
-    <footer>
-      <p>
-        &copy; <span id="myYear"> </span> | Tommy Sylver | Utah |
-        <a href="https://www.byui.edu/online" target="_blank"
-          >BYUI Online Learning</a
-        >
-      </p>
-      <p>Last Updated: <span id="myDate"></span></p>
-    </footer>
+    <footer>&copy;<span id="year"></span> | Tommy Sylver</footer>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
