--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -31,23 +31,85 @@
     <main>
       <section>
         <h2>Target Audience Description</h2>
-        <p>
-          what would be the audience of the website like ? Lorem ipsum, dolor
-          sit amet consectetur adipisicing elit. Sunt deserunt, tempora,
-          exercitationem maiores odio suscipit vitae illo ducimus praesentium
-          dolore iste, natus expedita reiciendis ab unde sapiente qui blanditiis
-          quam.
-        </p>
+        <p>what would be the audience of the website like ?</p>
+
+        <ul>
+          <li>
+            <b>Who:</b> Almost everyone will access the website to check the
+            weather. In a regular basis, it's going to be business and team
+            leader.
+          </li>
+          <li><b>Age:</b> 14 - 100</li>
+          <li>
+            <b>Technology:</b> As a important information, the visitors will
+            probably go for the most easy way which is to use his/her mobile
+            phone. But we can expect the use of computer also.
+          </li>
+          <li>
+            <b>Motivation:</b> learn more about the weather and get a forecast
+            about what the weather is and will be like on a specific date and
+            time.
+          </li>
+        </ul>
       </section>
 
       <section>
         <h2>Personas</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium
-          inventore perspiciatis sequi, ipsa quibusdam facere illum rem debitis
-          quos omnis ipsum sed consectetur vitae aut doloremque ad perferendis,
-          minus dolores.
-        </p>
+        <div class="personas">
+          <img src="images/john.jpg" alt="image of Johm" />
+          <ul>
+            <li><b>Name:</b> John Miller</li>
+            <li><b>Occupation:</b> Chief Executive Officer CEO</li>
+            <li>
+              <b>Age and Education: </b>45 years old. He has a master degree in
+              Business Management.
+            </li>
+            <li>
+              <b>Goals and motivation for using the site:</b> As responible for
+              the accomplishment of the company business and reach goals, he
+              should stay knowledgeable about weather changes and its effect.
+            </li>
+            <li>
+              <b>Social:</b> He is very active and serious about his job. But
+              also, loves being wit his family.
+            </li>
+            <li>
+              <b>Technology:</b> He most likely will use his iphone and computer
+              to daily check his email, and work stuff. He prefers to use his
+              computer because he doesn't really like to read things in a small
+              viewport.
+            </li>
+          </ul>
+        </div>
+
+        <div class="personas">
+          <img src="images/mike.jpg" alt="image of Johm" />
+          <ul>
+            <li><b>Name:</b> Mike Bolton</li>
+            <li><b>Occupation:</b> Web Developer</li>
+            <li>
+              <b>Age and Education: </b>
+              A 25 years old boy. Passionate with technology, he pursued his
+              Education in web developping. He recently had his master degree in
+              applied technology.
+            </li>
+            <li>
+              <b>Goals and motivation for using the site:</b>
+              Learn more about the weather and in some way interested on how the
+              site look and interaction
+            </li>
+            <li>
+              <b>Social: </b>
+              He is a networker and effective communicative online.
+            </li>
+            <li>
+              <b>Technology: </b>
+              As a web developer, he is very familiar with any tools. It's hard
+              to define which devices or what kind of tools he is going to use
+              to visit the site.
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section>
@@ -55,39 +117,28 @@
 
         <ul>
           <li>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque,
-            debitis ipsam fugiat maxime illo ducimus sint quisquam architecto id
+            Why is knowing the weather that important? What is its relationship
+            with what we are doing?
           </li>
           <li>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque,
-            debitis ipsam fugiat maxime illo ducimus sint quisquam architecto id
+            I am going to be able to chill out on the beach tomorrow. I am
+            wondering how the weather is going to be?
+          </li>
+          <li>How would i know if the information provided is really true?</li>
+          <li>
+            A family is planning to travel somewhere. They are wondering where
+            they can find an accurate information and an easy to access source.
           </li>
           <li>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque,
-            debitis ipsam fugiat maxime illo ducimus sint quisquam architecto id
-          </li>
-          <li>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque,
-            debitis ipsam fugiat maxime illo ducimus sint quisquam architecto id
-          </li>
-          <li>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque,
-            debitis ipsam fugiat maxime illo ducimus sint quisquam architecto id
+            I have a friend in California, i am from Mexico. She would like to
+            know how is the weather there?
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <p>
-        &copy; <span id="myYear"> </span> | Tommy Sylver | Utah |
-        <a href="https://www.byui.edu/online" target="_blank"
-          >BYUI Online Learning</a
-        >
-      </p>
-      <p>Last Updated: <span id="myDate"></span></p>
-    </footer>
+    <footer>&copy;<span id="year"></span> | Tommy Sylver</footer>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
