--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -36,25 +36,17 @@
         </p>
 
         <ul>
-          <li>Headings: *********</li>
-          <li>Paragraphs: **********</li>
-          <li>Footer: ************</li>
+          <li><u>Headings</u>: Josefin Sans</li>
+          <li><u>Paragraphs</u>: Open Sans</li>
+          <li><u>Footer</u>: Josefin Sans</li>
         </ul>
 
       </section>
 
     </main>
 
-    <footer>
-      <p>
-        &copy; <span id="myYear"> </span> | Tommy Sylver | Utah |
-        <a href="https://www.byui.edu/online" target="_blank"
-          >BYUI Online Learning</a
-        >
-      </p>
-      <p>Last Updated: <span id="myDate"></span></p>
-    </footer>
+    <footer>&copy;<span id="year"></span> | Tommy Sylver</footer>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
