--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Audience</title>
     <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/small.css" rel="stylesheet" />
     <link href="css/medium.css" rel="stylesheet" />
@@ -22,7 +22,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="target-audience.html">Audience</a></li>
+        <li><a class="active" href="target-audience.html">Audience</a></li>
         <li><a href="color-scheme.html">Color</a></li>
         <li><a href="typography.html">Typography</a></li>
       </ul>
