--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -16,7 +16,7 @@
         <img src="images/weather.png" alt="weather logo" />
       </picture>
 
-      <h1>Weather Site</h1>
+      <h1>Know The Weather</h1>
     </header>
 
     <nav>
@@ -32,7 +32,7 @@
       <section>
         <h2>Name</h2>
         <p>
-          The site name will be <b>knowtheweather.net</b>. I chose this because it emphasize the
+          The site name will be <b>knowtheweather</b>. I chose this because it emphasize the
           importance of the weather and the purpose of the site, Which is to help you know the weather. 
         </p>
       </section>
