--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -16,7 +16,7 @@
         <img src="images/weather.png" alt="weather logo" />
       </picture>
 
-      <h1>Weather Site</h1>
+      <h1>Know The Weather</h1>
     </header>
 
     <nav>
