--- a/home-portal/index.html
+++ b/home-portal/index.html
@@ -21,8 +21,9 @@
             <li>Lesson 01: <a href="https://tommy18062001.github.io/wdd230/ranch/" target="_blank">Ranch Page</a></li>
             <li>Lesson 02: <a href="https://tommy18062001.github.io/wdd230/lesson2/design-principles.html" target="_blank">Design Principles</a></li>
             <li>Lesson 03: <a href="https://tommy18062001.github.io/wdd230/lesson3/index.html">Weather Site Plan</a></li>
-            <li>Lesson 04: <a href="https://tommy18062001.github.io/wdd230/water_cycle/index.html">Water Cycle</a></li>
-            <li>Lesson 05: <a href="https://tommy18062001.github.io/wdd230/lesson4/preston.html">Preston Page</a></li>
+            <li>Assigment 04: <a href="https://tommy18062001.github.io/wdd230/water_cycle/index.html">Water Cycle</a></li>
+            <li>Lesson 04: <a href="https://tommy18062001.github.io/wdd230/lesson4/preston.html">Preston Page</a></li>
+            <li>Lesson 05: <a href="https://tommy18062001.github.io/wdd230/lesson5/preston.html">Preston Page</a></li>
         </ul>
     </main>
 
