New upate for the Preston Page

--- a/lesson5/preston.html
+++ b/lesson5/preston.html
@@ -28,7 +28,7 @@
     <!-- Nav part -->
     <div class="nav-wrapper">
       <nav>
-        <button onclick="toggleMenu()">&#9776</button>
+        <button onclick="toggleMenu()">&#9776;</button>
         <ul id="ourNav" class="hide">
           <li><a href="#">Home</a></li>
           <li><a class="active" href="#">Preston</a></li>
@@ -130,10 +130,11 @@
                 <h3>Email:</h3>
                 <p>johantony63@gmail.com</p>
             </div>
-            <picture>
+
+            <div class="map">
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7754874.611282574!2d42.976556820190204!3d-18.367353212375605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x21f50031040daf03%3A0xb45d4ec9b2579ea1!2sTanamborozano%2C%20Toamasina!5e0!3m2!1sfr!2smg!4v1634388711856!5m2!1sfr!2smg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>  <!-- Apply a iframe here, check resources -->
-            </picture>
-        </div>
+            </div>
+          </div>
 
     </section>
 
