--- a/home-portal/index.html
+++ b/home-portal/index.html
@@ -7,7 +7,6 @@
     <title>Home Portal | Tommy Sylver</title>
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="css/style.css">    
-
 </head>
 <body>
     <header>
@@ -23,7 +22,7 @@
             <li>Lesson 03: <a href="https://tommy18062001.github.io/wdd230/lesson3/index.html">Weather Site Plan</a></li>
             <li>Assigment 04: <a href="https://tommy18062001.github.io/wdd230/water_cycle/index.html">Water Cycle</a></li>
             <li>Lesson 04: <a href="https://tommy18062001.github.io/wdd230/lesson4/preston.html">Preston Page</a></li>
-            <li>Lesson 05: <a href="https://tommy18062001.github.io/wdd230/lesson5/preston.html">Preston Page</a></li>
+            <li>Lesson 05: <a href="https://tommy18062001.github.io/wdd230/lesson5/preston.html">Preston Page Updated</a></li>
         </ul>
     </main>
 
