First update for the preston page for lesson 6

--- a/home-portal/index.html
+++ b/home-portal/index.html
@@ -22,7 +22,8 @@
             <li>Lesson 03: <a href="https://tommy18062001.github.io/wdd230/lesson3/index.html">Weather Site Plan</a></li>
             <li>Assigment 04: <a href="https://tommy18062001.github.io/wdd230/water_cycle/index.html">Water Cycle</a></li>
             <li>Lesson 04: <a href="https://tommy18062001.github.io/wdd230/lesson4/preston.html">Preston Page</a></li>
-            <li>Lesson 05: <a href="https://tommy18062001.github.io/wdd230/lesson5/preston.html">Preston Page Updated</a></li>
+            <li>Lesson 05: <a href="https://tommy18062001.github.io/wdd230/lesson5/preston.html">Preston Page Alpha Version</a></li>
+            <li>Lesson 06: <a href="https://tommy18062001.github.io/wdd230/lesson6/preston.html">Preston Page Beta Version</a></li>
         </ul>
     </main>
 
