--- a/lesson6/preston.html
+++ b/lesson6/preston.html
@@ -49,13 +49,15 @@
 
       <div class="hero-parent">
         <picture>
-        <img src="images/banner.jpg" alt="hero image" />
+          <source media="(max-width: 760px)" srcset="images/banner2.jpg">
+          <img src="images/banner1.jpg" alt="hero image" />
         </picture>
         <div class="hero-description">
           <h2>Weather Summary</h2>
-          <p>High: 36°C</p>
-          <p>Low: - 2°C</p>
-          <p>Wind: 7 mph</p>
+          <p>High: <span id="temp">32</span>&deg;</p>
+          <p>Low: - 2&deg;</p>
+          <p>Wind Speed: <span id="speed">60</span>mph</p>
+          <p>Wind Chill: <span id="windChill"></span></p>
         </div>
       </div>
       
@@ -144,7 +146,8 @@
     <div id="footer-wrapper">
       <footer>&copy; Tommy Sylver | <span id="today"></span></footer>
     </div>
-
     <script src="js/script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script src="js/webfontload.js"></script>
   </body>
 </html>
