Final update for lesson 6 assignment

--- a/lesson6/preston.html
+++ b/lesson6/preston.html
@@ -49,6 +49,7 @@
 
       <div class="hero-parent">
         <picture>
+          <source media="(max-width: 480px)" srcset="images/banner3.jpg">
           <source media="(max-width: 760px)" srcset="images/banner2.jpg">
           <img src="images/banner1.jpg" alt="hero image" />
         </picture>
@@ -146,7 +147,9 @@
     <div id="footer-wrapper">
       <footer>&copy; Tommy Sylver | <span id="today"></span></footer>
     </div>
+
     <script src="js/script.js"></script>
+    <script src="js/windchill.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/webfontload.js"></script>
   </body>
