--- a/lesson6/preston.html
+++ b/lesson6/preston.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Preston Page</title>
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="/home-portal/favicon.ico">
     <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/small.css" rel="stylesheet" />
     <link href="css/medium.css" rel="stylesheet" />
@@ -36,7 +36,7 @@
           <li><a href="#">Sode Spring</a></li>
           <li><a href="#">Fish Haven</a></li>
           <li><a href="#">Storm center</a></li>
-          <li><a href="#">Gallery</a></li>
+          <li><a href="https://tommy18062001.github.io/wdd230/lesson7/gallery.html">Gallery</a></li>
         </ul>
       </nav>
     </div>
