--- a/lesson6/preston.html
+++ b/lesson6/preston.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Preston Page</title>
+    <title>Preston</title>
     <link rel="shortcut icon" href="/home-portal/favicon.ico">
     <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/small.css" rel="stylesheet" />
@@ -32,7 +32,7 @@
         <button onclick="toggleMenu()">&#9776;</button>
         <ul id="ourNav" class="hide">
           <li><a href="#">Home</a></li>
-          <li><a class="active" href="#">Preston</a></li>
+          <li><a href="https://tommy18062001.github.io/wdd230/lesson6/preston.html" class="active" href="#">Preston</a></li>
           <li><a href="#">Sode Spring</a></li>
           <li><a href="#">Fish Haven</a></li>
           <li><a href="#">Storm center</a></li>
