--- a/lesson7/gallery.html
+++ b/lesson7/gallery.html
@@ -31,12 +31,12 @@
       <nav>
         <button onclick="toggleMenu()">&#9776;</button>
         <ul id="ourNav" class="hide">
-          <li><a href="https://tommy18062001.github.io/wdd230/lesson6/preston.html">Home</a></li>
-          <li><a href="#">Preston</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="https://tommy18062001.github.io/wdd230/lesson6/preston.html">Preston</a></li>
           <li><a href="#">Sode Spring</a></li>
           <li><a href="#">Fish Haven</a></li>
           <li><a href="#">Storm center</a></li>
-          <li><a href="#" class="active">Gallery</a></li>
+          <li><a href="https://tommy18062001.github.io/wdd230/lesson7/gallery.html" class="active">Gallery</a></li>
         </ul>
       </nav>
     </div>
