--- a/lesson7/gallery.html
+++ b/lesson7/gallery.html
@@ -44,53 +44,54 @@
     <main>
       <!-- Gallery main section -->
       <h1>Weather Gallery</h1>
-      <article>
-        <picture>
+      <div class="gallery">
+        <figure>
           <img src="images/placeholder.png" alt="forest" data-src="images/weather/gallery1.jpg">
-          <legend>Autumn</legend>
-        </picture>
-        <picture>
+          <figcaption>Autumn</figcaption>
+        </figure>
+        <figure>
           <img src="images/placeholder.png" alt="forest" data-src="images/weather/gallery2.jpg">
-          <legend>Sunlight</legend>
-        </picture>
-        <picture>
+          <figcaption>Sunlight</figcaption>
+        </figure>
+        <figure>
           <img src="images/placeholder.png" alt="forest" data-src="images/weather/gallery3.jpg">
-          <legend>Blue Sky</legend>
-        </picture>
-        <picture>
+          <figcaption>Blue Sky</figcaption>
+        </figure>
+        <figure>
           <img src="images/placeholder.png" alt="forest" data-src="images/weather/gallery4.jpg">
-          <legend>Snow</legend>
-        </picture>
-        <picture>
+          <figcaption>Snow</figcaption>
+        </figure>
+        <figure>
           <img src="images/placeholder.png" alt="forest" data-src="images/weather/gallery5.jpg">
-          <legend>Lake under white clouds</legend>
-        </picture>
-        <picture>
+          <figcaption>Lake under white clouds</figcaption>
+        </figure>
+        <figure>
           <img src="images/placeholder.png" alt="forest" data-src="images/weather/gallery6.jpg">
-          <legend>Lightning during nighttime</legend>
-        </picture>
-        <picture>
+          <figcaption>Lightning during nighttime</figcaption>
+        </figure>
+        <figure>
           <img src="images/placeholder.png" alt="forest" data-src="images/weather/gallery7.jpg">
-          <legend>CLouds during golden hour</legend>
-        </picture>
-        <picture>
+          <figcaption>CLouds during golden hour</figcaption>
+        </figure>
+        <figure>
           <img src="images/placeholder.png" alt="forest" data-src="images/weather/gallery8.jpg">
-          <legend>The Umbrella</legend>
-        </picture>
-        <picture>
+          <figcaption>The Umbrella</figcaption>
+        </figure>
+        <figure>
           <img src="images/placeholder.png" alt="forest" data-src="images/weather/gallery9.jpg">
-          <legend>Lightning</legend>
-        </picture>
-      </article>
+          <figcaption>Lightning</figcaption>
+        </figure>
+      </div>
     </main>
 
     <div id="footer-wrapper">
-      <footer>&copy; Tommy Sylver | <span id="today"></span></footer>
+      <footer>&copy; Tommy Sylver | <span id="today"></span> | Last Visited: <span id="lastvisit"></span></footer>
     </div>
 
     <script src="js/script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/webfontload.js"></script>
     <script src="js/lazyload.js"></script>
+    <script src="js/localstorage.js"></script>
   </body>
 </html>
