Finished the table build

--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -4,21 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Table Build</title>
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 <body>
     <table>
+        <caption></caption>
         <thead>
-
+            <tr>
+                <th colspan="3" scope="colgroup">ACME Wildest</th>
+            </tr>
+            <tr>
+                <th scope="col">Period</th>
+                <th scope="col">Sales</th>
+                <th scope="col">Sales Goal</th>
+            </tr>
         </thead>
         <tbody>
-
+            <tr>
+                <td>August</td>
+                <td>&dollar;3,590</td>
+                <td>&dollar;4,000</td>
+            </tr>
+            <tr>
+                <td>September</td>
+                <td>&dollar;4,420</td>
+                <td>&dollar;5,000</td>
+            </tr>
+            <tr>
+                <td>October</td>
+                <td>&dollar;4,870</td>
+                <td>&dollar;5,000</td>
+            </tr>
+            <tr>
+                <td>November</td>
+                <td>&dollar;8,610</td>
+                <td id="colored">&dollar;7,500</td>
+            </tr>
+            <tr>
+                <td>Black Friday</td>
+                <td colspan="2">&dollar;3,200</td>
+            </tr>
+            <tr>
+                <td>December</td>
+                <td>&dollar;6,820</td>
+                <td>&dollar;7,500</td>
+            </tr>
         </tbody>
         <tfoot>
-            
+            <tr>
+                <td colspan="3">Compiled 12.20.2020 by bRauls</td>
+            </tr>
         </tfoot>
-    </table>
-    
+    </table>   
 </body>
 </html>
