--- a/home-portal/index.html
+++ b/home-portal/index.html
@@ -26,7 +26,9 @@
             <li>Lesson 06: <a href="https://tommy18062001.github.io/wdd230/lesson6/preston.html">Preston Page Beta Version</a></li>
             <li>Assignment 07: <a href="https://tommy18062001.github.io/wdd230/lesson7/lazyload.html">Progressive Loading of Images</a></li>
             <li>Lesson 07: <a href="https://tommy18062001.github.io/wdd230/lesson7/gallery.html">Gallery Page</a></li>
-            <li>Lesson 08: <a href="https://tommy18062001.github.io/wdd230/lesson8/tablebuild.html">Table Build</a></li>
+            <li>Assignmet 08: <a href="https://tommy18062001.github.io/wdd230/lesson8/tablebuild.html">Table Build</a></li>
+            <li>Lesson 08: <a href="https://tommy18062001.github.io/wdd230/lesson8/stormcenter.html">Storm Center</a></li>
+
         </ul>
     </main>
 
