--- a/lesson6/preston.html
+++ b/lesson6/preston.html
@@ -35,7 +35,7 @@
           <li><a href="https://tommy18062001.github.io/wdd230/lesson6/preston.html" class="active" href="#">Preston</a></li>
           <li><a href="#">Sode Spring</a></li>
           <li><a href="#">Fish Haven</a></li>
-          <li><a href="#">Storm center</a></li>
+          <li><a href="https://tommy18062001.github.io/wdd230/lesson8/stormcenter.html">Storm center</a></li>
           <li><a href="https://tommy18062001.github.io/wdd230/lesson7/gallery.html">Gallery</a></li>
         </ul>
       </nav>
