--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Preston</title>
+    <title>Storm Center</title>
     <link rel="shortcut icon" href="/home-portal/favicon.ico" />
     <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/small.css" rel="stylesheet" />
@@ -36,7 +36,7 @@
           </li>
           <li><a href="#">Sode Spring</a></li>
           <li><a href="#">Fish Haven</a></li>
-          <li><a href="#" class="active">Storm center</a></li>
+          <li><a href="https://tommy18062001.github.io/wdd230/lesson8/stormcenter.html" class="active">Storm center</a></li>
           <li>
             <a
               href="https://tommy18062001.github.io/wdd230/lesson7/gallery.html"
