fix error in the storm center page

--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -32,7 +32,7 @@
         <ul id="ourNav" class="hide">
           <li><a href="#">Home</a></li>
           <li>
-            <a href="https://tommy18062001.github.io/wdd230/lesson6/preston.html" href="#">Preston</a>
+            <a href="https://tommy18062001.github.io/wdd230/lesson6/preston.html">Preston</a>
           </li>
           <li><a href="#">Sode Spring</a></li>
           <li><a href="#">Fish Haven</a></li>
@@ -66,7 +66,7 @@
             </label>
             
             <label class="top"> Storm Region
-                <select name="stormregion" id="">
+                <select name="stormregion">
                     <option value="">Please Select &#9662;</option>
                     <option value="preston">Preston</option>
                     <option value="soda_spring">Soda Spring</option>
@@ -85,7 +85,7 @@
             <legend>Additional Information</legend>
             <label class="top">
                 Comments
-                <textarea name="comments" id="" cols="30" rows="10"></textarea>
+                <textarea name="comments" cols="30" rows="10"></textarea>
               </label>
         </fieldset>
         <input type="submit" value="Send a report" class="btn">
