--- a/home-portal/index.html
+++ b/home-portal/index.html
@@ -28,6 +28,8 @@
             <li>Lesson 07: <a href="https://tommy18062001.github.io/wdd230/lesson7/gallery.html">Gallery Page</a></li>
             <li>Assignmet 08: <a href="https://tommy18062001.github.io/wdd230/lesson8/tablebuild.html">Table Build</a></li>
             <li>Lesson 08: <a href="https://tommy18062001.github.io/wdd230/lesson8/stormcenter.html">Storm Center</a></li>
+            <li>Assignment 09: <a href="https://tommy18062001.github.io/wdd230/lesson9/prophets.html">Prophets</a></li>
+
 
         </ul>
     </main>
