--- a/lesson6/preston.html
+++ b/lesson6/preston.html
@@ -31,8 +31,8 @@
       <nav>
         <button onclick="toggleMenu()">&#9776;</button>
         <ul id="ourNav" class="hide">
-          <li><a href="#">Home</a></li>
-          <li><a href="https://tommy18062001.github.io/wdd230/lesson6/preston.html" class="active" href="#">Preston</a></li>
+          <li><a href="https://tommy18062001.github.io/wdd230/lesson9/index.html">Home</a></li>
+          <li><a href="https://tommy18062001.github.io/wdd230/lesson6/preston.html" class="active">Preston</a></li>
           <li><a href="#">Sode Spring</a></li>
           <li><a href="#">Fish Haven</a></li>
           <li><a href="https://tommy18062001.github.io/wdd230/lesson8/stormcenter.html">Storm center</a></li>
