--- a/home-portal/index.html
+++ b/home-portal/index.html
@@ -29,6 +29,8 @@
             <li>Assignmet 08: <a href="https://tommy18062001.github.io/wdd230/lesson8/tablebuild.html">Table Build</a></li>
             <li>Lesson 08: <a href="https://tommy18062001.github.io/wdd230/lesson8/stormcenter.html">Storm Center</a></li>
             <li>Assignment 09: <a href="https://tommy18062001.github.io/wdd230/lesson9/prophets.html">Prophets</a></li>
+            <li>Wireframe: <a href="https://tommy18062001.github.io/wdd230/lesson9/homewireframes.html">Wireframe</a></li>
+            <li>lesson 09: <a href="https://tommy18062001.github.io/wdd230/lesson9/index.html">Wireframe</a></li>
 
 
         </ul>
