--- a/lesson7/gallery.html
+++ b/lesson7/gallery.html
@@ -31,7 +31,7 @@
       <nav>
         <button onclick="toggleMenu()">&#9776;</button>
         <ul id="ourNav" class="hide">
-          <li><a href="#">Home</a></li>
+          <li><a href="https://tommy18062001.github.io/wdd230/lesson9/index.html">Home</a></li>
           <li><a href="https://tommy18062001.github.io/wdd230/lesson6/preston.html">Preston</a></li>
           <li><a href="#">Sode Spring</a></li>
           <li><a href="#">Fish Haven</a></li>
