--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -30,7 +30,7 @@
       <nav>
         <button onclick="toggleMenu()">&#9776;</button>
         <ul id="ourNav" class="hide">
-          <li><a href="#">Home</a></li>
+          <li><a href="https://tommy18062001.github.io/wdd230/lesson9/index.html">Home</a></li>
           <li>
             <a href="https://tommy18062001.github.io/wdd230/lesson6/preston.html">Preston</a>
           </li>
