--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -42,106 +42,16 @@
     </div>
 
     <main>
-      <h1>Preston</h1>
+      <h1>Home</h1>
+      <p>The Weather in your town</p>
 
-      <div id="banner" class="show-banner">
-        <b>Saturday</b> = Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion.</div>
-
-      <div class="hero-parent">
-        <picture>
-          <source media="(max-width: 480px)" srcset="images/banner3.jpg">
-          <source media="(max-width: 760px)" srcset="images/banner2.jpg">
-          <img src="images/banner1.jpg" alt="hero image" />
-        </picture>
-        <div class="hero-description">
-          <h2>Weather Summary</h2>
-          <p>High: <span id="temp">32</span>&deg;</p>
-          <p>Low: - 2&deg;</p>
-          <p>Wind Speed: <span id="speed">60</span>mph</p>
-          <p>Wind Chill: <span id="windChill"></span></p>
-        </div>
+      <div class="banner">
+        <img src="images/svg/weather.svg" alt="banner image">
       </div>
-      
 
-    <!-- Our forecast section. At some point it will hidden  -->
-      <section class="forecast-section">
-        <h2>Five Day Forecast</h2>
-        <div class="forecast">
-          <div>
-            <h3>Monday</h3>
-            <img src="images/weather.png" alt="" />
-            <span>High Temp°</span>
-          </div>
-          <div>
-            <h3>Tuesday</h3>
-            <img src="images/weather.png" alt="" />
-            <span>High Temp°</span>
-          </div>
-          <div>
-            <h3>Wednesday</h3>
-            <img src="images/weather.png" alt="" />
-            <span>High Temp°</span>
-          </div>
-          <div>
-            <h3>Thursday</h3>
-            <img src="images/weather.png" alt="" />
-            <span>High Temp°</span>
-          </div>
-          <div>
-            <h3>Friday</h3>
-            <img src="images/weather.png" alt="" />
-            <span>High Temp°</span>
-          </div>
-        </div>
-      </section>
-
-    <!-- the second section of our page -->
-      <section class="clearfix">
-        <h2>Article Title</h2>
-        <div class="article" >
-          <img src="images/boy.jpg" alt="map" />
-          <p>
-            On this day in history the first (you find something cool in history and
-            complete this paragraph. Ryiam velit odio ut et ac tristique, dictumst,
-            odio. Velit a ac, integer sociis placerat rhoncus nec purus augue a
-            odio nunc. Odio nisi, parturient placerat cum in, nunc diam quis
-            ridiculus risus a porttitor massa. Augue penatibus. Proin cum? Risus
-            montes, turpis porta nunc tempor adipiscing adipiscing. Pulvinar
-            quis. Elit lundium lectus nisi! Egestas velit nunc, mus! Dolor facilisis,
-            nec nascetur cum, dictumst montes nisi, magna diam porta elit nisi
-            ac, purus placerat, a ac purus rhoncus! Dolor etiam. Ridiculus et
-            Town Name (as an h1 tag)
-            © Your Name • Thursday, 6 April 2020
-            dolor ac! Massa, mid mid ultrices, rhoncus massa! Odio et arcu porta duis augue a facilisis vel duis nisi natoque tortor
-            ultricies odio rhoncus elementum et dictumst risus. Dapibus sit, sit ac. Adipiscing?
-          </p>
-        </div>
-      </section>
-
-    <!-- The contact section of our page  -->
-    <section>
-        <h2>Contact Us</h2>
-        <div class="contact">
-            <div>
-                <h3>Address: </h3>
-                <p>Lot 170 parcelle</p>
-                <p>22/31 Toamasina</p>
-                <p>Madagascar</p>
-            </div>
-            <div>
-                <h3>Phone:</h3>
-                <p>+26134088010</p>
-                <h3>Email:</h3>
-                <p>johantony63@gmail.com</p>
-            </div>
-
-            <div class="map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7754874.611282574!2d42.976556820190204!3d-18.367353212375605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x21f50031040daf03%3A0xb45d4ec9b2579ea1!2sTanamborozano%2C%20Toamasina!5e0!3m2!1sfr!2smg!4v1634388711856!5m2!1sfr!2smg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>  <!-- Apply a iframe here, check resources -->
-            </div>
-          </div>
-
-    </section>
-
+      <div class="town-cards">
+      </div>
+    
     </main>
 
     <div id="footer-wrapper">
@@ -149,7 +59,7 @@
     </div>
 
     <script src="js/script.js"></script>
-    <script src="js/windchill.js"></script>
+    <script src="js/towns.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/webfontload.js"></script>
   </body>
