--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -44,6 +44,7 @@
     <main>
       <h1>Home</h1>
       <p>The Weather in your town</p>
+      <p><a href="https://tommy18062001.github.io/wdd230/lesson9/homewireframes.html" target="_blank">Wireframes</a></p>
 
       <div class="banner">
         <img src="images/svg/weather.svg" alt="banner image">
