--- a/home-portal/index.html
+++ b/home-portal/index.html
@@ -20,19 +20,22 @@
             <li>Lesson 01: <a href="https://tommy18062001.github.io/wdd230/ranch/" target="_blank">Ranch Page</a></li>
             <li>Lesson 02: <a href="https://tommy18062001.github.io/wdd230/lesson2/design-principles.html" target="_blank">Design Principles</a></li>
             <li>Lesson 03: <a href="https://tommy18062001.github.io/wdd230/lesson3/index.html">Weather Site Plan</a></li>
-            <li>Assigment 04: <a href="https://tommy18062001.github.io/wdd230/water_cycle/index.html">Water Cycle</a></li>
-            <li>Lesson 04: <a href="https://tommy18062001.github.io/wdd230/lesson4/preston.html">Preston Page</a></li>
+            <li>Lesson 04: <a href="https://tommy18062001.github.io/wdd230/water_cycle/index.html">Water Cycle</a> | 
+                <a href="https://tommy18062001.github.io/wdd230/lesson4/preston.html">Preston Page</a>
+            </li>
             <li>Lesson 05: <a href="https://tommy18062001.github.io/wdd230/lesson5/preston.html">Preston Page Alpha Version</a></li>
             <li>Lesson 06: <a href="https://tommy18062001.github.io/wdd230/lesson6/preston.html">Preston Page Beta Version</a></li>
-            <li>Assignment 07: <a href="https://tommy18062001.github.io/wdd230/lesson7/lazyload.html">Progressive Loading of Images</a></li>
-            <li>Lesson 07: <a href="https://tommy18062001.github.io/wdd230/lesson7/gallery.html">Gallery Page</a></li>
-            <li>Assignmet 08: <a href="https://tommy18062001.github.io/wdd230/lesson8/tablebuild.html">Table Build</a></li>
-            <li>Lesson 08: <a href="https://tommy18062001.github.io/wdd230/lesson8/stormcenter.html">Storm Center</a></li>
-            <li>Assignment 09: <a href="https://tommy18062001.github.io/wdd230/lesson9/prophets.html">Prophets</a></li>
-            <li>Wireframe: <a href="https://tommy18062001.github.io/wdd230/lesson9/homewireframes.html">Wireframe</a></li>
-            <li>lesson 09: <a href="https://tommy18062001.github.io/wdd230/lesson9/index.html">Wireframe</a></li>
+            <li>Lesson 07: <a href="https://tommy18062001.github.io/wdd230/lesson7/lazyload.html">Progressive Loading of Images</a> | 
+                <a href="https://tommy18062001.github.io/wdd230/lesson7/gallery.html">Gallery Page</a>
+            </li>
 
-
+            <li>Lesson 08: <a href="https://tommy18062001.github.io/wdd230/lesson8/tablebuild.html">Table Build</a> | 
+                <a href="https://tommy18062001.github.io/wdd230/lesson8/stormcenter.html">Storm Center</a>
+            </li>
+            <li>Lesson 09: <a href="https://tommy18062001.github.io/wdd230/lesson9/prophets.html">Prophets</a> | 
+                <a href="https://tommy18062001.github.io/wdd230/lesson9/homewireframes.html">Wireframe</a> | 
+                <a href="https://tommy18062001.github.io/wdd230/lesson9/index.html">Home Page</a>
+            </li>
         </ul>
     </main>
 
