--- a/home-portal/index.html
+++ b/home-portal/index.html
@@ -36,6 +36,8 @@
                 <a href="https://tommy18062001.github.io/wdd230/lesson9/homewireframes.html">Wireframe</a> | 
                 <a href="https://tommy18062001.github.io/wdd230/lesson9/index.html">Home Page</a>
             </li>
+            <li>Lesson 10: <a href="https://tommy18062001.github.io/wdd230/lesson10/index.html">Preston Weather Api</a> | 
+            </li>
         </ul>
     </main>
 
