--- a/lesson10/index.html
+++ b/lesson10/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <main>
-      <h1 id="townName"></h1>
+      <h1 id="townName">Town Name</h1>
 
       <div id="banner" class="show-banner">
         <b>Saturday</b> = Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion.</div>
