--- a/lesson11/sodaspring.html
+++ b/lesson11/sodaspring.html
@@ -94,6 +94,13 @@
         </div>
       </section>
 
+      <section>
+        <h2>Events</h2>
+        <div class="events">
+
+        </div>
+      </section>
+
     <!-- The contact section of our page  -->
     <section>
         <h2>Contact Us</h2>
@@ -126,6 +133,7 @@
     <script src="js/preston/script.js"></script>
     <script src="js/sodaspring/weatherData.js"></script>
     <script src="js/preston/windchill.js"></script>
+    <script src="js/sodaspring/towns.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/webfontload.js"></script>
   </body>
