--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
     <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/home/small.css" rel="stylesheet" />
     <link href="css/home/medium.css" rel="stylesheet" />
