--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Preston</title>
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
     <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/preston/small.css" rel="stylesheet" />
     <link href="css/preston/medium.css" rel="stylesheet" />
