new update to the weather site

--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -44,7 +44,7 @@
     <main>
       <h1>Home</h1>
       <p>The Weather in your town</p>
-      <p><a href="https://tommy18062001.github.io/wdd230/lesson9/homewireframes.html" target="_blank">Wireframes</a></p>
+      
 
       <div class="banner">
         <img src="images/home/svg/weather.svg" alt="banner image">
@@ -52,6 +52,9 @@
 
       <div class="town-cards">
       </div>
+
+      <!-- Wireframes -->
+      <a href="https://tommy18062001.github.io/wdd230/lesson9/homewireframes.html" target="_blank">Check Wireframes</a>
     
     </main>
 
