--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -75,7 +75,7 @@
       <section class="clearfix">
         <h2>Article Title</h2>
         <div class="article" >
-          <img src="images/preston/boy.jpg" alt="map" />
+          <img src="images/preston/preston.jpg" alt="map" />
           <p>
             On this day in history the first (you find something cool in history and
             complete this paragraph. Ryiam velit odio ut et ac tristique, dictumst,
