final update for the weather site

--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Page</title>
+    <title>Know your weather - Home</title>
     <link rel="shortcut icon" href="favicon.ico">
     <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/home/small.css" rel="stylesheet" />
@@ -20,8 +20,8 @@
           <img src="images/weather.png" alt="our_logo" />
         </picture>
         <div>
-          <h1>96th Floor Weather</h1>
-          <h2>Better Weather Up here</h2>
+          <h1>Know Your Weather</h1>
+          <h2>Wherever You Go</h2>
         </div>
       </header>
     </div>
