--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -20,8 +20,8 @@
           <img src="images/weather.png" alt="our_logo" />
         </picture>
         <div>
-          <h1>96th Floor Weather</h1>
-          <h2>Better Weather Up here</h2>
+          <h1>Know Your Weather</h1>
+          <h2>Wherever You Go</h2>
         </div>
       </header>
     </div>
@@ -42,7 +42,7 @@
     </div>
 
     <main>
-      <h1 id="townName">Town</h1>
+      <h1 id="townName">&nbsp;</h1>
 
       <div id="banner" class="show-banner">
         <b>Saturday</b> = Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion.</div>
