--- a/lesson11/sodaspring.html
+++ b/lesson11/sodaspring.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Soda Spring</title>
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico" />
     <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/preston/small.css" rel="stylesheet" />
     <link href="css/preston/medium.css" rel="stylesheet" />
     <link href="css/preston/large.css" rel="stylesheet" />
   </head>
   <body>
-
     <!-- Header  -->
     <div class="header-wrapper">
       <header>
@@ -32,7 +31,7 @@
         <button onclick="toggleMenu()">&#9776;</button>
         <ul id="ourNav" class="hide">
           <li><a href="index.html">Home</a></li>
-          <li><a href="preston.html" >Preston</a></li>
+          <li><a href="preston.html">Preston</a></li>
           <li><a href="sodaspring.html" class="active">Sode Spring</a></li>
           <li><a href="fishhaven.html">Fish Haven</a></li>
           <li><a href="stormcenter.html">Storm center</a></li>
@@ -45,12 +44,20 @@
       <h1 id="townName">&nbsp;</h1>
 
       <div id="banner" class="show-banner">
-        <b>Saturday</b> = Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion.</div>
+        <b>Saturday</b> = Preston Pancakes in the Park! 9:00 a.m. Saturday at
+        the city park pavilion.
+      </div>
 
       <div class="hero-parent">
         <picture>
-          <source media="(max-width: 480px)" srcset="images/sodaspring/sodaspring3.jpg">
-          <source media="(max-width: 760px)" srcset="images/sodaspring/sodaspring2.jpg">
+          <source
+            media="(max-width: 480px)"
+            srcset="images/sodaspring/sodaspring3.jpg"
+          />
+          <source
+            media="(max-width: 760px)"
+            srcset="images/sodaspring/sodaspring2.jpg"
+          />
           <img src="images/sodaspring/sodaspring1.jpg" alt="hero image" />
         </picture>
         <div class="hero-description">
@@ -61,69 +68,74 @@
           <p>Wind Chill: <span id="windChill"></span></p>
         </div>
       </div>
-      
 
-    <!-- Our forecast section. At some point it will hidden  -->
+      <!-- Our forecast section. At some point it will hidden  -->
       <section class="forecast-section">
         <h2>Five Day Forecast</h2>
-        <div class="forecast">
-        
-        </div>
+        <div class="forecast"></div>
       </section>
 
-    <!-- the second section of our page -->
+      <!-- the second section of our page -->
       <section class="clearfix">
-        <h2>Article Title</h2>
-        <div class="article" >
+        <h2>Article</h2>
+        <div class="article">
           <img src="images/sodaspring/sodaspring.jpg" alt="map" />
           <p>
-            On this day in history the first (you find something cool in history and
-            complete this paragraph. Ryiam velit odio ut et ac tristique, dictumst,
-            odio. Velit a ac, integer sociis placerat rhoncus nec purus augue a
-            odio nunc. Odio nisi, parturient placerat cum in, nunc diam quis
-            ridiculus risus a porttitor massa. Augue penatibus. Proin cum? Risus
-            montes, turpis porta nunc tempor adipiscing adipiscing. Pulvinar
-            quis. Elit lundium lectus nisi! Egestas velit nunc, mus! Dolor facilisis,
-            nec nascetur cum, dictumst montes nisi, magna diam porta elit nisi
-            ac, purus placerat, a ac purus rhoncus! Dolor etiam. Ridiculus et
-            Town Name (as an h1 tag)
-            © Your Name • Thursday, 6 April 2020
-            dolor ac! Massa, mid mid ultrices, rhoncus massa! Odio et arcu porta duis augue a facilisis vel duis nisi natoque tortor
-            ultricies odio rhoncus elementum et dictumst risus. Dapibus sit, sit ac. Adipiscing?
+            The city is named for the hundreds of natural springs of carbonated
+            water that are located in and around the city. The springs were
+            well known to Native Americans and were a famous landmark along the
+            Oregon Trail in the middle 19th century. Today the city is also
+            known as the location of the Soda Springs Geyser, which was
+            unleashed in 1934 when "town fathers" were looking for hot water for
+            a "hot pool" bathing attraction. Instead they drilled into a chamber
+            of highly pressurized carbon dioxide gas and cold water and the
+            geyser was released. After running for weeks, and flooding the
+            downtown area, it was capped and manually released when requested as
+            a tourist attraction. Now it is let loose every hour on the hour by
+            a timed release valve. Its height and volume have not decreased
+            after many years. There are viewing platforms at either end of the
+            travertine mound where the geyser erupts. Interpretive signs are
+            located on the platforms explaining this phenomenon.
+            <br>
+            <a href="https://en.wikipedia.org/wiki/Soda_Springs,_Idaho" target="_blank">Wikipedia Source</a>
           </p>
         </div>
       </section>
 
       <section>
         <h2>Events</h2>
-        <div class="events">
-
-        </div>
+        <div class="events"></div>
       </section>
 
-    <!-- The contact section of our page  -->
-    <section>
+      <!-- The contact section of our page  -->
+      <section>
         <h2>Contact Us</h2>
         <div class="contact">
-            <div>
-                <h3>Address: </h3>
-                <p>Lot 170 parcelle</p>
-                <p>22/31 Toamasina</p>
-                <p>Madagascar</p>
-            </div>
-            <div>
-                <h3>Phone:</h3>
-                <p>+26134088010</p>
-                <h3>Email:</h3>
-                <p>johantony63@gmail.com</p>
-            </div>
-
-            <div class="map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d1467.1685419628336!2d-111.60515964636197!3d42.654211704444975!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x8755968bb0047ae5%3A0x9d3970a1a6df8e12!2sSoda%20Springs%2C%20Idaho%2C%20%C3%89tats-Unis!3m2!1d42.6543652!2d-111.60466869999999!5e0!3m2!1sfr!2smg!4v1637758532698!5m2!1sfr!2smg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>            </div>
+          <div>
+            <h3>Address:</h3>
+            <p>Lot 170 parcelle</p>
+            <p>22/31 Toamasina</p>
+            <p>Madagascar</p>
+          </div>
+          <div>
+            <h3>Phone:</h3>
+            <p>+26134088010</p>
+            <h3>Email:</h3>
+            <p>johantony63@gmail.com</p>
           </div>
 
-    </section>
-
+          <div class="map">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d1467.1685419628336!2d-111.60515964636197!3d42.654211704444975!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x8755968bb0047ae5%3A0x9d3970a1a6df8e12!2sSoda%20Springs%2C%20Idaho%2C%20%C3%89tats-Unis!3m2!1d42.6543652!2d-111.60466869999999!5e0!3m2!1sfr!2smg!4v1637758532698!5m2!1sfr!2smg"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+            ></iframe>
+          </div>
+        </div>
+      </section>
     </main>
 
     <div id="footer-wrapper">
