--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fish Haven</title>
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico" />
     <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/preston/small.css" rel="stylesheet" />
     <link href="css/preston/medium.css" rel="stylesheet" />
     <link href="css/preston/large.css" rel="stylesheet" />
   </head>
   <body>
-
     <!-- Header  -->
     <div class="header-wrapper">
       <header>
@@ -45,12 +44,20 @@
       <h1 id="townName">&nbsp;</h1>
 
       <div id="banner" class="show-banner">
-        <b>Saturday</b> = Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion.</div>
+        <b>Saturday</b> = Preston Pancakes in the Park! 9:00 a.m. Saturday at
+        the city park pavilion.
+      </div>
 
       <div class="hero-parent">
         <picture>
-          <source media="(max-width: 480px)" srcset="images/fishhaven/fishhaven3.jpg">
-          <source media="(max-width: 760px)" srcset="images/fishhaven/fishhaven2.jpg">
+          <source
+            media="(max-width: 480px)"
+            srcset="images/fishhaven/fishhaven3.jpg"
+          />
+          <source
+            media="(max-width: 760px)"
+            srcset="images/fishhaven/fishhaven2.jpg"
+          />
           <img src="images/fishhaven/fishhaven1.jpg" alt="hero image" />
         </picture>
         <div class="hero-description">
@@ -61,69 +68,74 @@
           <p>Wind Chill: <span id="windChill"></span></p>
         </div>
       </div>
-      
 
-    <!-- Our forecast section. At some point it will hidden  -->
+      <!-- Our forecast section. At some point it will hidden  -->
       <section class="forecast-section">
         <h2>Five Day Forecast</h2>
-        <div class="forecast">
-        
-        </div>
+        <div class="forecast"></div>
       </section>
 
-    <!-- the second section of our page -->
+      <!-- the second section of our page -->
       <section class="clearfix">
-        <h2>Article Title</h2>
-        <div class="article" >
+        <h2>Article</h2>
+        <div class="article">
           <img src="images/fishhaven/fishhaven.jpg" alt="map" />
           <p>
-            On this day in history the first (you find something cool in history and
-            complete this paragraph. Ryiam velit odio ut et ac tristique, dictumst,
-            odio. Velit a ac, integer sociis placerat rhoncus nec purus augue a
-            odio nunc. Odio nisi, parturient placerat cum in, nunc diam quis
-            ridiculus risus a porttitor massa. Augue penatibus. Proin cum? Risus
-            montes, turpis porta nunc tempor adipiscing adipiscing. Pulvinar
-            quis. Elit lundium lectus nisi! Egestas velit nunc, mus! Dolor facilisis,
-            nec nascetur cum, dictumst montes nisi, magna diam porta elit nisi
-            ac, purus placerat, a ac purus rhoncus! Dolor etiam. Ridiculus et
-            Town Name (as an h1 tag)
-            © Your Name • Thursday, 6 April 2020
-            dolor ac! Massa, mid mid ultrices, rhoncus massa! Odio et arcu porta duis augue a facilisis vel duis nisi natoque tortor
-            ultricies odio rhoncus elementum et dictumst risus. Dapibus sit, sit ac. Adipiscing?
+            Bear Lake is a natural freshwater lake on the Idaho–Utah border in
+            the Western United States. About 109 square miles (280 km2) in size,
+            it is split about equally between the two states; its Utah portion
+            comprises the second-largest natural freshwater lake in Utah, after
+            Utah Lake. The lake has been called the "Caribbean of the
+            Rockies" for its unique turquoise-blue color, which is due to the
+            refraction of calcium carbonate (limestone) deposits suspended in
+            the lake. Its water properties have led to the evolution of
+            several unique species of fauna that occur only within the lake.
+            Bear Lake is over 250,000 years old.[4] It was formed by fault
+            subsidence that continues today, slowly deepening the lake along the
+            eastern side. In 1911 the majority of the flow of the Bear River
+            was diverted into Bear Lake via Mud Lake and a canal from Stewart
+            Dam, ending 11,000 years of separation between the lake and that
+            river system. 
+            <br>
+            <a href="https://en.wikipedia.org/wiki/Bear_Lake_(Idaho%E2%80%93Utah)" target="_blank">Wikipedia Source</a>
           </p>
         </div>
       </section>
 
       <section>
         <h2>Events</h2>
-        <div class="events">
-
-        </div>
+        <div class="events"></div>
       </section>
 
-    <!-- The contact section of our page  -->
-    <section>
+      <!-- The contact section of our page  -->
+      <section>
         <h2>Contact Us</h2>
         <div class="contact">
-            <div>
-                <h3>Address: </h3>
-                <p>Lot 170 parcelle</p>
-                <p>22/31 Toamasina</p>
-                <p>Madagascar</p>
-            </div>
-            <div>
-                <h3>Phone:</h3>
-                <p>+26134088010</p>
-                <h3>Email:</h3>
-                <p>johantony63@gmail.com</p>
-            </div>
-
-            <div class="map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d11853.350898490224!2d-111.39879122207074!3d42.03593783936417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x875415e9bdab006f%3A0xc1864ed86dd2b0e4!2sFish%20Haven%2C%20Idaho%2C%20%C3%89tats-Unis!3m2!1d42.0371544!2d-111.395956!5e0!3m2!1sfr!2smg!4v1637758587714!5m2!1sfr!2smg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>            </div>
+          <div>
+            <h3>Address:</h3>
+            <p>Lot 170 parcelle</p>
+            <p>22/31 Toamasina</p>
+            <p>Madagascar</p>
+          </div>
+          <div>
+            <h3>Phone:</h3>
+            <p>+26134088010</p>
+            <h3>Email:</h3>
+            <p>johantony63@gmail.com</p>
           </div>
 
-    </section>
-
+          <div class="map">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d11853.350898490224!2d-111.39879122207074!3d42.03593783936417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x875415e9bdab006f%3A0xc1864ed86dd2b0e4!2sFish%20Haven%2C%20Idaho%2C%20%C3%89tats-Unis!3m2!1d42.0371544!2d-111.395956!5e0!3m2!1sfr!2smg!4v1637758587714!5m2!1sfr!2smg"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+            ></iframe>
+          </div>
+        </div>
+      </section>
     </main>
 
     <div id="footer-wrapper">
