--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Preston</title>
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico" />
     <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/preston/small.css" rel="stylesheet" />
     <link href="css/preston/medium.css" rel="stylesheet" />
     <link href="css/preston/large.css" rel="stylesheet" />
   </head>
   <body>
-
     <!-- Header  -->
     <div class="header-wrapper">
       <header>
@@ -45,12 +44,20 @@
       <h1 id="townName">&nbsp;</h1>
 
       <div id="banner" class="show-banner">
-        <b>Saturday</b> = Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion.</div>
+        <b>Saturday</b> = Preston Pancakes in the Park! 9:00 a.m. Saturday at
+        the city park pavilion.
+      </div>
 
       <div class="hero-parent">
         <picture>
-          <source media="(max-width: 480px)" srcset="images/preston/banner3.jpg">
-          <source media="(max-width: 760px)" srcset="images/preston/banner2.jpg">
+          <source
+            media="(max-width: 480px)"
+            srcset="images/preston/banner3.jpg"
+          />
+          <source
+            media="(max-width: 760px)"
+            srcset="images/preston/banner2.jpg"
+          />
           <img src="images/preston/banner1.jpg" alt="hero image" />
         </picture>
         <div class="hero-description">
@@ -61,69 +68,72 @@
           <p>Wind Chill: <span id="windChill"></span></p>
         </div>
       </div>
-      
 
-    <!-- Our forecast section. At some point it will hidden  -->
+      <!-- Our forecast section. At some point it will hidden  -->
       <section class="forecast-section">
         <h2>Five Day Forecast</h2>
-        <div class="forecast">
-        
-        </div>
+        <div class="forecast"></div>
       </section>
 
-    <!-- the second section of our page -->
+      <!-- the second section of our page -->
       <section class="clearfix">
         <h2>Article Title</h2>
-        <div class="article" >
+        <div class="article">
           <img src="images/preston/preston.jpg" alt="map" />
           <p>
-            On this day in history the first (you find something cool in history and
-            complete this paragraph. Ryiam velit odio ut et ac tristique, dictumst,
-            odio. Velit a ac, integer sociis placerat rhoncus nec purus augue a
-            odio nunc. Odio nisi, parturient placerat cum in, nunc diam quis
-            ridiculus risus a porttitor massa. Augue penatibus. Proin cum? Risus
-            montes, turpis porta nunc tempor adipiscing adipiscing. Pulvinar
-            quis. Elit lundium lectus nisi! Egestas velit nunc, mus! Dolor facilisis,
-            nec nascetur cum, dictumst montes nisi, magna diam porta elit nisi
-            ac, purus placerat, a ac purus rhoncus! Dolor etiam. Ridiculus et
-            Town Name (as an h1 tag)
-            © Your Name • Thursday, 6 April 2020
-            dolor ac! Massa, mid mid ultrices, rhoncus massa! Odio et arcu porta duis augue a facilisis vel duis nisi natoque tortor
-            ultricies odio rhoncus elementum et dictumst risus. Dapibus sit, sit ac. Adipiscing?
+            The Bear River Massacre occurred in 1863 at a point a few miles
+            northwest of Preston. The Bear River Massacre Site is a National
+            Historic Landmark. In 1866, Latter-day Saint (LDS, or Mormon)
+            pioneers arrived in the northern end of the Cache Valley, stretching
+            across southeastern Idaho and northeastern Utah. They founded a
+            community in that location and named it Worm Creek, but in 1881
+            changed it to Preston because leaders of the LDS Church in Salt Lake
+            City objected to the name "Worm Creek" being part of any church
+            congregation's name. The name Preston was suggested by a local
+            member to honor William B. Preston, who at the time was president of
+            the LDS Church's Cache Stake. It was not until the 1880s while
+            William C. Parkinson was serving as the bishop of the Preston LDS
+            Ward that a regular townsite was laid out.
+            <br>
+            <a href="https://en.wikipedia.org/wiki/Preston,_Idaho" target="_blank">Wikipedia Source</a>
           </p>
         </div>
       </section>
 
       <section>
         <h2>Events</h2>
-        <div class="events">
-
-        </div>
+        <div class="events"></div>
       </section>
 
-    <!-- The contact section of our page  -->
-    <section>
+      <!-- The contact section of our page  -->
+      <section>
         <h2>Contact Us</h2>
         <div class="contact">
-            <div>
-                <h3>Address: </h3>
-                <p>Lot 170 parcelle</p>
-                <p>22/31 Toamasina</p>
-                <p>Madagascar</p>
-            </div>
-            <div>
-                <h3>Phone:</h3>
-                <p>+26134088010</p>
-                <h3>Email:</h3>
-                <p>johantony63@gmail.com</p>
-            </div>
-
-            <div class="map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d94736.51073475165!2d-111.94665794808789!3d42.09641938563325!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x8754f78c7cda6c31%3A0xf1b3b4fc465a4a3f!2sPreston%2C%20Idaho%2C%20United%20States!3m2!1d42.0963133!2d-111.87661729999999!5e0!3m2!1sfr!2smg!4v1637758158709!5m2!1sfr!2smg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>            </div>
+          <div>
+            <h3>Address:</h3>
+            <p>Lot 170 parcelle</p>
+            <p>22/31 Toamasina</p>
+            <p>Madagascar</p>
+          </div>
+          <div>
+            <h3>Phone:</h3>
+            <p>+26134088010</p>
+            <h3>Email:</h3>
+            <p>johantony63@gmail.com</p>
           </div>
 
-    </section>
-
+          <div class="map">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d94736.51073475165!2d-111.94665794808789!3d42.09641938563325!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x8754f78c7cda6c31%3A0xf1b3b4fc465a4a3f!2sPreston%2C%20Idaho%2C%20United%20States!3m2!1d42.0963133!2d-111.87661729999999!5e0!3m2!1sfr!2smg!4v1637758158709!5m2!1sfr!2smg"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+            ></iframe>
+          </div>
+        </div>
+      </section>
     </main>
 
     <div id="footer-wrapper">
